Add step to save results  as pickle file

--- a/Pred 22 Labels.ipynb
+++ b/Pred 22 Labels.ipynb
@@ -44,11 +44,12 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.multioutput import MultiOutputClassifier\n",
     "import datetime\n",
+    "import pickle\n",
     "\n",
     "#Takes a scikitlearn classifier (Param: method ) as input along with with features(param: h_features) and lables (Param:h_labels)\n",
     "# runs The classifier N times (param: val_iter)\n",
     "\n",
-    "def classify(method,h_features, h_labels, val_iter=3):\n",
+    "def classify(method,h_features, h_labels, filename, val_iter=3):\n",
     "    \n",
     "    print(h_features.shape, h_labels.shape)\n",
     "    print \"Training -> {0}  - Classifier running {1} times.................\".format(str(method), val_iter)   \n",
@@ -78,6 +79,20 @@
     "        precision_micro.append(precision_score(y_Test, predicted, average='micro'))\n",
     "                         \n",
     "        classwise_stats.append(class_metrics(predicted,y_Test))\n",
+    "        \n",
+    "    results = {\n",
+    "        'classwise_stats': classwise_stats,\n",
+    "        'f1_macro': f1_macro,\n",
+    "        'f1_micro': f1_micro,\n",
+    "        'recall_macro': recall_macro,\n",
+    "        'recall_micro': recall_micro,\n",
+    "        'accuracy': accuracy,\n",
+    "        'precision_macro': precision_macro,\n",
+    "        'precision_micro': precision_micro\n",
+    "    }\n",
+    "    \n",
+    "    with open(filename, 'w') as f:\n",
+    "        pickle.dump(results, f)\n",
     "    \n",
     "    print \"F1 macro\"\n",
     "    print f1_macro\n",
@@ -154,7 +169,7 @@
    "outputs": [],
    "source": [
     "from sklearn.svm import SVC\n",
-    "scoresvc, predictedsvc = classify(SVC(C=1.0, kernel='rbf'), datf1_mashup, label1_mashup)\n"
+    "scoresvc, predictedsvc = classify(SVC(C=1.0, kernel='rbf'), datf1_mashup, label1_mashup, 'svc_mashup_22.pkl')\n"
    ]
   },
   {
@@ -164,7 +179,7 @@
    "outputs": [],
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
-    "score, predicted = classify(LogisticRegression(), datf1_mashup, label1_mashup)\n"
+    "score, predicted = classify(LogisticRegression(), datf1_mashup, label1_mashup, 'logistic_mashup_22.pkl')\n"
    ]
   },
   {
@@ -202,7 +217,7 @@
    ],
    "source": [
     "from sklearn.naive_bayes import GaussianNB\n",
-    "score, predicted = classify(GaussianNB(),datf1_mashup, label1_mashup)\n"
+    "score, predicted = classify(GaussianNB(),datf1_mashup, label1_mashup, 'gnb_mashup_22.pkl')\n"
    ]
   },
   {
@@ -240,7 +255,7 @@
    "outputs": [],
    "source": [
     "from sklearn.naive_bayes import GaussianNB\n",
-    "score, predicted = classify(GaussianNB(), dat1_graph_sage,label1_graph_sage)"
+    "score, predicted = classify(GaussianNB(), dat1_graph_sage,label1_graph_sage, 'gnb_graphsage_22.pkl')"
    ]
   },
   {
@@ -250,7 +265,7 @@
    "outputs": [],
    "source": [
     "from sklearn.svm import SVC\n",
-    "scoresvc, predictedsvc = classify(SVC(C=1.0, kernel='rbf'), dat1_graph_sage,label1_graph_sage)"
+    "scoresvc, predictedsvc = classify(SVC(C=1.0, kernel='rbf'), dat1_graph_sage,label1_graph_sage, 'svc_graphsage_22.pkl')"
    ]
   },
   {
@@ -260,7 +275,7 @@
    "outputs": [],
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
-    "score, predicted = classify(LogisticRegression(), dat1_graph_sage,label1_graph_sage)"
+    "score, predicted = classify(LogisticRegression(), dat1_graph_sage,label1_graph_sage, 'logistic_graphsage_22.pkl')"
    ]
   }
  ],
